# bitpack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/bitpack/: bitpack.hpp
tests/: CMakeLists.txt  bitpack_base_usage.cpp
